# run-in-roblox

./: .gitignore  Cargo.toml  README.md  aftman.toml
.github/workflows/: ci.yml  release.yml
demo/: hello.lua
plugin/: build.lua  logger.luau  plugin.luau
src/: main.rs  message_receiver.rs  place_runner.rs
